cc_library(
    name = "sandbox",
    srcs = ["sand.cc"],
    hdrs = ["sand.h"],
    copts = ["-std=c++17"],
)

cc_test(
    name = "sandbox_test",
    srcs = ["sand_test.cc"],
    deps = [
        ":sandbox",
        "@com_google_googletest//:gtest_main",
    ],
    data = ["sand.cc"],
)

# cc_image(
#     name = "sandbox_image",
#     binary = ":sandbox_test",
# )