cc_library(
    name = "sandbox",
    srcs = ["sand.cc"],
    hdrs = ["sand.h"],
    copts = ["-std=c++17"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "sandbox_test",
    srcs = ["sand_test.cc"],
    deps = [
        ":sandbox",
        "@com_google_googletest//:gtest_main",
    ],
    data = ["sand.cc"],
)

cc_library(
    name = "user",
    srcs = [
        "user.cc",
        "user_controller.cc",
        ],
    hdrs = [
        "user.h",
        "user_controller.h",
        "user_type.h",
        "database.h",
        "message_bus.h",
    ],
    copts = ["-std=c++17"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)